infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost

      http:
        paths:
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: auth-serv-srv
                port:
                  number: 3003
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-serv-srv
                port:
                  number: 3003
          - path: /validate_token
            pathType: Prefix
            backend:
              service:
                name: auth-serv-srv
                port:
                  number: 3003
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: auth-serv-srv
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
